@@ -1,3 +1,7 @@
+2013-02-07  Ilim Ugur  <ilimugur@gmail.com>
+
+	* metalink.c (parse_metalink): Rename `mlink' to 'm_link'.
+
 2012-12-09  Giuseppe Scrivano  <gscrivano@gnu.org>
 
 	* test.c: Include "wget.h".
